syntax = "proto3";

option csharp_namespace = "Pipelines.Proto";

package pipelines.runner;

message LogChunk {
  string build_id = 1;
  string step_id = 2; // optional
  string content = 3;
}

message LogAck {}

service LogService {
  rpc StreamLogs(stream LogChunk) returns (LogAck);
}


